fix: adding nowrap to navbar lists

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,6 +23,7 @@ body {
   z-index: 1;
   padding-top: 100px;
   overflow-x: hidden;
+  white-space: nowrap;
   transition: all .5s;
 }
 
